[gd_scene load_steps=4 format=3 uid="uid://8f2kw8tvsj38"]

[ext_resource type="PackedScene" uid="uid://vh60dhp8qx0x" path="res://scenes/Ships/base_ship.tscn" id="1_ssoux"]
[ext_resource type="Script" path="res://scenes/Ships/enemy_ship.gd" id="2_bgar3"]
[ext_resource type="Texture2D" uid="uid://bhknr7qs3l5p2" path="res://images/enemy-ship/enemy-ship.png" id="3_5kco6"]

[node name="EnemyShip" groups=["enemyShip"] instance=ExtResource("1_ssoux")]
script = ExtResource("2_bgar3")
movementSpeed = 50
rotationSpeed = 2

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("3_5kco6")

[node name="MovementTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
autostart = true

[node name="ShootingTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
autostart = true

[node name="Marker2D" type="Marker2D" parent="." index="5"]
position = Vector2(0, -11)

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
